实现拖拽和缩放

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
     "jsx": "react",
     "allowJs": true,
     "baseUrl": ".",
+    "paths": {
+      "src/*":[
+        "src/*"
+      ]
+    },
     "declaration": true,
     "allowSyntheticDefaultImports": true
   }
